--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ape Rising</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <title>Ape Rising - Alternative Indie Retro Synth Rock</title>
 </head>
+
 <body>
-    
+
+    <header class="container-fluid">
+
+        <div class="parallax1">
+            <div class="logo">
+                <h1 class="uppercase">Ape Rising</h1>
+            </div>
+            <nav>
+                <ul class="nav-list">
+                    <li class="nav-item">Look</li>
+                    <li class="nav-item">Listen</li>
+                    <li class="nav-item">Learn</li>
+                </ul>
+            </nav>
+        </div>
+
+    </header>
+
+    <section class="container-fluid">
+
+        <div class="parallax2"></div>
+
+    </section>
+
+    <footer class="container-fluid"></footer>
+
 </body>
+
 </html>
