--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <title>Ape Rising - Alternative Indie Retro Synth Rock</title>
 </head>
 
@@ -16,16 +21,23 @@
 
     <header class="container-fluid">
 
-        <div class="parallax1">
-            <div class="logo">
-                <h1 class="uppercase">Ape Rising</h1>
-            </div>
-            <nav>
-                <ul class="nav-list">
-                    <li class="nav-item">Look</li>
-                    <li class="nav-item">Listen</li>
-                    <li class="nav-item">Learn</li>
-                </ul>
+        <div class="nav-list">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="#">Look</a></li>
+                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="#">Listen</a></li>
+                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="#">Learn</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
 
@@ -33,11 +45,34 @@
 
     <section class="container-fluid">
 
-        <div class="parallax2"></div>
+        <div class="landing">
+            <img class="album-cover" src="assets/images/album-high-res-red.jpg" />
+
+            <h3>New album - OUT NOW!</h3>
+
+            <div class="buy-image">
+            <a href="https://goo.gl/Suqqaf" target="_blank" data-content="https://goo.gl/Suqqaf" data-type="external">
+                <img alt="" data-type="image" src="https://static.wixstatic.com/media/d99db2_a7f361585e8a4f8894c366b259b72aaa~mv2.png/v1/fill/w_167,h_61,al_c,usm_0.66_1.00_0.01/d99db2_a7f361585e8a4f8894c366b259b72aaa~mv2.png">
+            </a>
+            </div>
+            
+            <div class="buy-image">
+            <a href="https://goo.gl/6q748k" target="_blank" data-content="https://goo.gl/6q748k" data-type="external">
+                <div><img alt="" data-type="image" src="https://static.wixstatic.com/media/d99db2_4e12b52953ad445496b6657f840a9dda~mv2.jpg/v1/crop/x_0,y_13,w_362,h_115/fill/w_166,h_53,al_c,q_80,usm_0.66_1.00_0.01/d99db2_4e12b52953ad445496b6657f840a9dda~mv2.jpg">
+            </a>
+            </div>
+
+
+        </div>
 
     </section>
 
-    <footer class="container-fluid"></footer>
+    <footer class="container-fluid">
+        
+        <div class="footer">
+            <span class="copyright">&copy; 2018 Ape Rising</span>
+        </div>
+    </footer>
 
 </body>
 
