--- a/listen.html
+++ b/listen.html
@@ -45,25 +45,7 @@
 
     <section class="container-fluid">
 
-        <div class="landing">
-            <img class="album-cover" src="assets/images/album-high-res-red.jpg" />
-
-            <h3>New album - OUT NOW!</h3>
-
-            <div class="buy-image">
-            <a href="https://goo.gl/Suqqaf" target="_blank" data-content="https://goo.gl/Suqqaf" data-type="external">
-                <img alt="" data-type="image" src="https://static.wixstatic.com/media/d99db2_a7f361585e8a4f8894c366b259b72aaa~mv2.png/v1/fill/w_167,h_61,al_c,usm_0.66_1.00_0.01/d99db2_a7f361585e8a4f8894c366b259b72aaa~mv2.png">
-            </a>
-            </div>
-            
-            <div class="buy-image">
-            <a href="https://goo.gl/6q748k" target="_blank" data-content="https://goo.gl/6q748k" data-type="external">
-                <div><img alt="" data-type="image" src="https://static.wixstatic.com/media/d99db2_4e12b52953ad445496b6657f840a9dda~mv2.jpg/v1/crop/x_0,y_13,w_362,h_115/fill/w_166,h_53,al_c,q_80,usm_0.66_1.00_0.01/d99db2_4e12b52953ad445496b6657f840a9dda~mv2.jpg">
-            </a>
-            </div>
-
-
-        </div>
+        LISTEN
 
     </section>
 
