--- a/listen.html
+++ b/listen.html
@@ -33,9 +33,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="look.html">Look</a></li>
-                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="listen.html">Listen</a></li>
-                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="learn.html">Learn</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="index.html">Home</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="look.html">Look</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase active"><a href="listen.html">Listen</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="learn.html">Learn</a></li>
                     </ul>
                 </div>
             </nav>
@@ -43,14 +44,16 @@
 
     </header>
 
-    <section class="container-fluid">
+    <section class="container">
 
-        LISTEN
+        <div class="embed-container">
+            <iframe src="https://open.spotify.com/embed/album/2ApNsL1zdR8a9ud9k7o57Q" width="800" height="460" frameborder="0" allowtransparency="false" allow="encrypted-media"></iframe>
+        </div>
 
     </section>
 
     <footer class="container-fluid">
-        
+
         <div class="footer">
             <span class="copyright">&copy; 2018 Ape Rising</span>
         </div>
