--- a/look.html
+++ b/look.html
@@ -33,9 +33,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="look.html">Look</a></li>
-                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="listen.html">Listen</a></li>
-                        <li class="nav-item col-xs-12 col-sm-4 col-md-4 col-lg-4 uppercase"><a href="learn.html">Learn</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="index.html">Home</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase active"><a href="look.html">Look</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="listen.html">Listen</a></li>
+                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="learn.html">Learn</a></li>
                     </ul>
                 </div>
             </nav>
@@ -43,23 +44,19 @@
 
     </header>
 
-    <section class="container-fluid">
-
-        <div class="inner-container">
-
-            <div class="youtube-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oHPDI6WQpbg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <div class="youtube-blurb">Ape Rising - The Model Prime Produced by Ape Rising (Johno Leader) Video - Defaced Productions & Ape Rising (2017)</div>
-            </div>
-
-
-            <div class="youtube-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/f0jmmWXqmk8?controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <div class="youtube-blurb">Ape Rising - King of the Universe (Official Video) All music written and produced by Ape Rising 2016 Edited by Ape Rising.</div>
-            </div>
-
+    <section class="container">
+        
+        <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/f0jmmWXqmk8?controls=0" frameborder="0" width="300" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
+        <div class="youtube-blurb">Ape Rising - King of the Universe (Official Video) All music written and produced by Ape Rising 2016 Edited by Ape Rising.</div>
 
+        <hr>
+
+        <div class="embed-container">
+            <iframe src="https://www.youtube.com/embed/oHPDI6WQpbg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="youtube-blurb">Ape Rising - The Model Prime Produced by Ape Rising (Johno Leader) Video - Defaced Productions & Ape Rising (2017)</div>
 
     </section>
 
