--- a/look.html
+++ b/look.html
@@ -33,10 +33,11 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav">
-                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="index.html">Home</a></li>
-                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase active"><a href="look.html">Look</a></li>
-                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="listen.html">Listen</a></li>
-                        <li class="nav-item col-xs-12 col-sm-3 col-md-3 col-lg-3 uppercase"><a href="learn.html">Learn</a></li>
+                        <li class="nav-item col-xs-12 col-sm-2 col-md-2 col-lg-2 col-sm-offset-1 uppercase"><a href="index.html">Home</a></li>
+                        <li class="nav-item col-xs-12 col-sm-2 col-md-2 col-lg-2 uppercase active"><a href="look.html">Look</a></li>
+                        <li class="nav-item col-xs-12 col-sm-2 col-md-2 col-lg-2 uppercase"><a href="listen.html">Listen</a></li>
+                        <li class="nav-item col-xs-12 col-sm-2 col-md-2 col-lg-2 uppercase"><a href="learn.html">Learn</a></li>
+                        <li class="nav-item col-xs-12 col-sm-2 col-md-2 col-lg-2 uppercase"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -63,6 +64,11 @@
     <footer class="container-fluid">
 
         <div class="footer">
+            <ul class="social-icons">
+                <li><a href="https://en-gb.facebook.com/ApeRising/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+                <li><a href="https://twitter.com/ape_rising" target="_blank"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UC2nl_4OjvSgz-8EoozNhVHQ" target="_blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+            </ul>
             <span class="copyright">&copy; 2018 Ape Rising</span>
         </div>
     </footer>
