--- a/contact.html
+++ b/contact.html
@@ -54,17 +54,17 @@
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="email" class="form-control" id="name" placeholder="Name">
+                    <input type="email" class="form-control" id="name" placeholder="Name" required autofocus>
                 </div>
                 
                 <div class="form-group">
                     <label for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
                 </div>
 
                 <div class="form-group">
                     <label for="enquiry">Enquiry</label>
-                    <textarea class="form-control" id="enquiry" rows="3"></textarea>
+                    <textarea class="form-control" id="enquiry" rows="3" required></textarea>
                 </div>
                 
                 <button type="submit" class="btn btn-red pull-right">Submit</button>
