Added alts, checked HTML/CSS validation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="container-fluid">
 
         <div class="landing">
-            <img class="album-cover" src="assets/images/album-high-res-red-cropped.jpg" />
+            <img class="album-cover" src="assets/images/album-high-res-red-cropped.jpg" alt="Cover Logo" />
 
             <h3>New album - OUT NOW!</h3>
 
