--- a/learn.html
+++ b/learn.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="image1">
-                <img class="image-thumb" src="assets/images/band-bw-1.jpg" />
+                <img class="image-thumb" src="assets/images/band-bw-1.jpg" alt="Band Shot" />
             </div>
 
 
@@ -77,7 +77,7 @@
             </div>
 
             <div class="image2">
-                <img class="image-thumb" src="assets/images/band-color-1.jpg" />
+                <img class="image-thumb" src="assets/images/band-color-1.jpg" alt="Band Shot" />
             </div>
 
         </div>
